grammar.js
    source_file: $ => choice($.proof, $.proof_v2),

    proof: $ => seq(
      $.header,
      optional($.proof_lines),
      $.footer,
    ),

    // The header line must not contain comments or newlines before its terminal
    // newline, so we capture it as a single opaque terminal (design decision 1).
    // Tightened to v3 only — v2 uses `header_v2` below.
    header: $ => /pseudo-Boolean proof version 3\.[0-9]+[ \t]*(\r\n|\n|\r)/,

    // =========================================================================
    // VeriPB 2.0 top-level (see design decision 8)
    // =========================================================================

    proof_v2: $ => seq(
      $.header_v2,
      optional($.proof_lines_v2),
      $.footer_v2,
    ),

    header_v2: $ => /pseudo-Boolean proof version 2\.[0-9]+[ \t]*(\r\n|\n|\r)/,

    // =========================================================================
    // Footer
    // =========================================================================

    footer: $ => seq(
      $.output_stmt,
      $.conclusion_stmt,
      $.end_stmt,
    ),

    output_stmt: $ => seq(
      'output',
      choice(
        seq('NONE', ';'),
        seq($.output_guarantee, $.output_type, ';'),
      ),
    ),

    conclusion_stmt: $ => seq(
      'conclusion',
      $.conclusion_type,
      ';',
    ),

    conclusion_type: $ => choice(
      'NONE',
      seq('SAT', optional(seq(':', $.solution))),
      seq('UNSAT', optional(seq(':', $.constraint_id))),
      seq(
        'BOUNDS',
        field('lower', $.bound),
        optional(seq(':', $.constraint_id)),
        field('upper', $.bound),
        optional(seq(':', $.solution)),
      ),
      seq('ENUMERATION_COMPLETE', $.positive_integer, optional(seq(':', $.constraint_id))),
      seq('ENUMERATION_PARTIAL', $.positive_integer),
    ),

    bound: $ => choice($.signed_integer, 'INF'),

    end_stmt: $ => seq('end', 'pseudo-Boolean', 'proof', ';'),

    // =========================================================================
    // Proof lines
    // =========================================================================

    proof_lines: $ => repeat1($.proof_line),

    // A proof line is either a (possibly labelled) top-level rule followed by ';'.
    proof_line: $ => choice(
      seq($.top_rule, ';'),
      seq($.label, $.labeled_rule, ';'),
    ),

    // Rules that produce an output constraint and can therefore carry a label.
    labeled_rule: $ => choice(
      $.pol_rule,
      $.rup_rule,
      $.pbc_rule,
      $.e_rule,
      $.i_rule,
      $.ia_rule,
      $.a_rule,
      $.red_rule,
      $.dom_rule,
      $.soli_rule,
      $.obji_rule,
      $.solx_rule,
      $.preserved_add_rule,
      $.preserved_rm_rule,
    ),

    top_rule: $ => choice(
      // output (label-able) rules
      $.pol_rule,
      $.rup_rule,
      $.pbc_rule,
      $.e_rule,
      $.i_rule,
      $.ia_rule,
      $.a_rule,
      $.red_rule,
      $.dom_rule,
      $.soli_rule,
      $.obji_rule,
      $.solx_rule,
      $.preserved_add_rule,
      $.preserved_rm_rule,
      // non-output rules
      $.del_rule,
      $.delc_rule,
      $.deld_rule,
      $.obju_rule,
      $.load_order_rule,
      $.core_rule,
      $.setlvl_rule,
      $.wiplvl_rule,
      $.str_to_core_rule,
      $.sol_rule,
      $.def_order_rule,
      $.f_rule,
      $.eobj_rule,
      $.eord_def_rule,
      $.eord_loaded_rule,
      $.start_time_rule,
      $.end_time_rule,
      $.is_deleted_rule,
      $.fail_rule,
      $.epreserved_rule,
    ),

    // =========================================================================
    // pol — Reverse Polish Notation (design decision 2)
    // =========================================================================

    pol_rule: $ => seq('pol', repeat1($._pol_token)),

    _pol_token: $ => choice(
      $._pol_int_op,    // <positive_integer> <op>  e.g. `3 *`
      seq('0', choice('*', '-', 'c', 'd', 'm', 'n')),  // 0 is valid operand (e.g. 0 *)
      $.constraint_id,  // integer ID or @label
      $.literal,        // variable or ~variable (literal axiom push)
      '+',              // binary add
      's',              // saturate
      'w',              // weaken (preceded by a literal in the token stream)
    ),

    // Represents the two-token form `<positive_integer> <binary_op>` where
    // positive_integer is the operand (not a stack push).
    rup_rule: $ => seq(
      'rup',
      $.constraint,
      optional(seq(':', optional($.rup_hints))),
    ),

    del_rule: $ => seq(
      'del',
      $.delete_type,
      optional($.witness_subproof_args),
    ),

    delete_type: $ => choice(
      seq('id',    optional($.constraint_ids)),
      seq('spec',  $.constraint),
      seq('range', $.constraint_id, $.constraint_id),
    ),

    red_rule: $ => seq(
      'red',
      $.constraint,
      optional($.witness_subproof_args),
    ),

    // =========================================================================
    // dom — Dominance-Based Strengthening
    // =========================================================================

    f_rule:          $ => seq('f',          $.unsigned_integer),
    witness_subproof_args: $ => seq(
      ':',
      optional($.substitution),
      optional(seq(
        ':',
        $.subproof,
        optional($.subproof_end_name),
        optional(seq(':', $.constraint_id)),
      )),
    ),

    // `: subproof [rule_name] [: constraint_id]`
    constraint: $ => seq(
      optional($.reification),
      optional($.sum),
      $.relational_operator,
      $.coefficient,
    ),

    // reification ::= literals '==>' | literal '<=='
    relational_operator: $ => choice('>=', '<='),

    // objective ::= (sum [coefficient]) | coefficient
    // The trailing standalone coefficient is the constant term.
    sum: $ => repeat1($.weighted_term),

    weighted_term: $ => seq($.coefficient, $.literal),

    coefficient: $ => $.signed_integer,

    // =========================================================================
    // Substitutions (witnesses)
    // =========================================================================

    // A sequence of (variable [->] (0 | 1 | literal)) pairs.
    substitution: $ => repeat1($.assignment),

    assignment: $ => seq(
      choice($.identifier, $.aux_variable),
      optional('->'),
      choice('0', '1', $.literal),
    ),

    // =========================================================================
    // Solutions
    // =========================================================================

    solution: $ => $.literals,

    // =========================================================================
    // Terminals: identifiers, literals, aux variables
    // =========================================================================

    // identifier: 1+ char, starts with letter/underscore; may contain ^ [ ] { } -
    // Used as the `word` terminal for keyword extraction, and as variable names,
    // order names, timer names, etc. throughout the grammar.
    // (Design decision 4: the semantic 2-char minimum for variables is not enforced
    // at the lexical level — that is a VeriPB semantic constraint, not a parsing one.)
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_\^\[\]{}\-]*/,

    // aux_variable: starts with '$'
    literal: $ => seq(optional('~'), choice($.identifier, $.aux_variable)),

    literals: $ => repeat1($.literal),

    // variables / aux_variables: named list rules used inside order definitions
    signed_integer: $ => token(seq(
      optional(/[+\-]/),
      /0|[1-9][0-9]*/,
    )),

    // unsigned_integer: non-negative integer (for f, setlvl, wiplvl, etc.)
    unsigned_integer: $ => /0|[1-9][0-9]*/,

    // positive_integer: strictly positive (for pol operands, proofgoal #N)
    positive_integer: $ => /[1-9][0-9]*/,

    // =========================================================================
    // Terminals: constraint IDs and labels
    // =========================================================================

    // constraint_id: a label or a non-zero integer (positive or negative).
    // No '+' prefix — that was VeriPB 2.0 syntax.
    constraint_id: $ => choice(
      $.label,
      $._neg_integer,
      $.positive_integer,
    ),

    // Negative non-zero integer (for constraint IDs only, not coefficients)
    _neg_integer: $ => token(/-[1-9][0-9]*/),

    constraint_ids: $ => repeat1($.constraint_id),

    // label: starts with '@' followed by identifier chars
    label: $ => /@[a-zA-Z0-9_\^\[\]{}\-]+/,

    // =========================================================================
    // Comments
    // =========================================================================

    comment: $ => /%[^\n\r]*/,

    // v2 comment: '*' followed by whitespace and a non-operand character. The
    // exclusion list (digit, sign, asterisk, label, tilde, AND whitespace) prevents
    // collision with the pol multiplication operator (see design decision 9).
    // Whitespace is excluded from the discriminator so that `*  -2 +` (pol body
    // with extra spaces) cannot be misread as a comment. Verified safe against
    // every file in the v2 and v3 corpora.
    comment_v2: $ => /\*[ \t]+[^\r\n0-9+\-*@~ \t][^\r\n]*/,

    // =========================================================================
    // VeriPB 2.0 footer and proof body
    // =========================================================================

    footer_v2: $ => seq(
      $.output_stmt_v2,
      $.conclusion_stmt_v2,
      $.end_stmt_v2,
    ),

    output_stmt_v2: $ => seq(
      'output',
      choice('NONE', seq($.output_guarantee, $.output_type)),
    ),

    conclusion_stmt_v2: $ => seq('conclusion', $.conclusion_type),

    end_stmt_v2: $ => seq('end', 'pseudo-Boolean', 'proof'),

    proof_lines_v2: $ => repeat1($.proof_line_v2),

    // A v2 proof line is either an unlabelled rule, or a labelled rule (label
    // followed by a label-able rule). No trailing `;` between lines.
    proof_line_v2: $ => choice(
      $.top_rule_v2,
      seq($.label, $.labeled_rule_v2),
    ),

    top_rule_v2: $ => choice(
      // output (label-able) rules
      $.pol_rule_v2,
      $.rup_rule_v2,
      $.e_rule_v2,
      $.ea_rule_v2,
      $.i_rule_v2,
      $.ia_rule_v2,
      $.a_rule_v2,
      $.red_rule_v2,
      $.dom_rule_v2,
      $.soli_rule_v2,
      $.solx_rule_v2,
      // non-output rules
      $.del_rule_v2,
      $.delc_rule_v2,
      $.deld_rule_v2,
      $.d_rule_v2,
      $.obju_rule_v2,
      $.load_order_rule_v2,
      $.core_rule_v2,
      $.setlvl_rule_v2,
      $.wiplvl_rule_v2,
      $.str_to_core_rule_v2,
      $.sol_rule_v2,
      $.def_order_rule_v2,
      $.pre_order_rule_v2,
      $.f_rule_v2,
      $.eobj_rule_v2,
      $.start_time_rule_v2,
      $.end_time_rule_v2,
      $.is_deleted_rule_v2,
      $.fail_rule,
    ),

    // -------------------------------------------------------------------------
    // v2 rules (most lack a trailing `;` per the legacy doc)
    // -------------------------------------------------------------------------

    // pol body shape is identical to v3 (same RPN operators).
    pol_rule_v2: $ => seq(choice('pol', 'p'), repeat1($._pol_token)),

    rup_rule_v2: $ => seq(
      choice('rup', 'u'),
      $.constraint,
      ';',
      optional($.rup_hints_v2),
    ),

    rup_hints_v2: $ => repeat1($.rup_hint_v2),
    rup_hint_v2: $ => choice('~', $.constraint_id),

    // del id <ids> [witness] | del spec/find <constraint> | del range <id> <id> [witness]
    // The corpus shows `del id 2 ; ; begin ... end -1` (del with subproof) and
    // `del find <constraint> ;` (undocumented alias for spec).
    witness_args_v2: $ => seq(
      ';',
      optional($.substitution_v2),
      optional(seq(';', optional($.subproof_v2))),
    ),

    red_rule_v2: $ => seq('red', $.constraint, $.witness_args_v2),
    f_rule_v2:          $ => seq('f',          $.unsigned_integer, optional($.unsigned_integer)),
    substitution_v2: $ => repeat1($.assignment_v2),

    assignment_v2: $ => seq(
      choice($.identifier, $.aux_variable),
      optional(choice('->', '→')),
      choice('0', '1', $.literal),
    ),

    // -------------------------------------------------------------------------
    // v2 subproofs and proofgoals
    //
    // Both subproof and proofgoal bodies may contain inline rules (without a
    // wrapping `proofgoal`). They close with `end` optionally followed by a
    // constraint-id hint, e.g. `end -1` or `end 13`. Subproofs nest — a `red`
    // inside a subproof carries its own `; begin ... end` block.
    // -------------------------------------------------------------------------

    subproof_v2: $ => seq(
      'begin',
      optional($.subproof_lines_v2),
      'end',
      optional(field('end_id', $.constraint_id)),
      // Some corpus files use `end -1 ;` (stray trailing `;` after the subproof).
      optional(';'),
    ),

    subproof_lines_v2: $ => repeat1(choice(
      $.proofgoal_v2,
      $.proof_line_v2,
    )),
